feat: add more emi recipe integrations